--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.html linguist-language=Java
+*.css linguist-language=Java
+*.h linguist-language=Java
