--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 *.c
 *.cpp
 *.objc
+Scripts/Script-4.sql
+.dbeaver/project-metadata.json
+.dbeaver/project-metadata.json
+.dbeaver/project-metadata.json
+.dbeaver/project-metadata.json
