Created Config class
Created config class for configuration puposes with configuration properties file.

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,4 +1,4 @@
 
 #SQLite database url
 #Change this ABSOLUTE path poiting to your local database
-DB = "jdbc:sqlite:C:\\Users\\Guillermo\\Desktop\\WorkStation\\M8-Servlets\\WebContent\\WEB-INF\\lib\\test.db";
+DB = jdbc:sqlite:C:\\Users\\Guillermo\\Desktop\\WorkStation\\M8-Servlets\\WebContent\\WEB-INF\\lib\\test.db
